--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
     AOS.init();
   </script>
 
+  <script>
+    document.querySelector('.image-transition').addEventListener('mousemove', function (e) {
+      const rect = e.target.getBoundingClientRect();
+      const x = e.clientX - rect.left;
+      const y = e.clientY - rect.top;
+      e.target.style.setProperty('--x', `${x}px`);
+      e.target.style.setProperty('--y', `${y}px`);
+    });
+  </script>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
