--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
       e.target.style.setProperty('--y', `${y}px`);
     });
   </script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
