--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </script>
 
 
-  <script>
+  <!-- <script>
     document.querySelector('.image-transition').addEventListener('mousemove', function (e) {
       const rect = e.target.getBoundingClientRect();
       const x = e.clientX - rect.left;
@@ -50,7 +50,8 @@
       e.target.style.setProperty('--x', `${x}px`);
       e.target.style.setProperty('--y', `${y}px`);
     });
-  </script>
+  </script> -->
+
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
     AOS.init();
